syntax = "proto3";

package ChitChat;

option go_package = "./grpc";

message Empty {}

message JoinRequest {
    string participant_name = 1;
}

message JoinResponse {
    string participant_id = 1;
    string message = 2;
}

message PublishRequest {
    string participant_id = 1;
    string content = 2;
}

message PublishResponse {
    bool success = 1;
}

message BroadcastMessage {
    string content = 1;
    int64 lamport_timestamp = 2;
    string sender = 3;
}

message LeaveRequest {
  string participant_id = 1;
}

service ChitChatService {
    rpc Join(JoinRequest) returns (JoinResponse);

    rpc Publish(PublishRequest) returns (PublishResponse);

    rpc ReceiveBroadcasts(Empty) returns (stream BroadcastMessage);

    rpc Leave(LeaveRequest) returns (Empty);
}

